폼 컨트롤 문자열이 영어로 번역됨.

--- a/Form1.en.resx
+++ b/Form1.en.resx
@@ -6817,4 +6817,10 @@
         //////////////////////////////////8=
 </value>
   </data>
+  <data name="CreateProjectFailed" xml:space="preserve">
+    <value>echo Create Project Failed : https://www.npmjs.com/package/cordova</value>
+  </data>
+  <data name="ProjectCreatedSuccessfully" xml:space="preserve">
+    <value>echo Project created successfully!</value>
+  </data>
 </root>
