--- a/locale.ko.resx
+++ b/locale.ko.resx
@@ -149,6 +149,10 @@
     <value>다운로드 페이지를 여시겠습니까?</value>
     <comment>Cordova</comment>
   </data>
+  <data name="CLEAR_BUILD_LOG" xml:space="preserve">
+    <value>빌드 로그 삭제</value>
+    <comment>Form1</comment>
+  </data>
   <data name="CopyProjectFiles1" xml:space="preserve">
     <value>게임 폴더 복사를 시작합니다 [robocopy 사용]</value>
     <comment>Cordova</comment>
@@ -328,6 +332,10 @@
   <data name="Requirements2" xml:space="preserve">
     <value>echo ...</value>
     <comment>Cordova</comment>
+  </data>
+  <data name="SAVE_BUILD_LOG" xml:space="preserve">
+    <value>빌드 로그 저장</value>
+    <comment>Form1</comment>
   </data>
   <data name="SUCCESS_INSTALLED_CORDOVA" xml:space="preserve">
     <value>echo 코르도바 설치 및 업데이트가 완료되었습니다.</value>
